testdata/baselines/reference/submodule/compiler/computedPropertiesNarrowed.errors.txt
computedPropertiesNarrowed.ts(4,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(5,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(10,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(11,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(15,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(15,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(16,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(16,26): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(18,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(21,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(25,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(30,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(31,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(36,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(37,14): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(41,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(42,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
computedPropertiesNarrowed.ts(46,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
computedPropertiesNarrowed.ts(47,15): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== computedPropertiesNarrowed.ts (19 errors) ====
    const x: 0 | 1 = Math.random()? 0: 1;
    declare function assert(n: number): asserts n is 1;
    assert(x);
    export let o = {
               ~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:4:12: Add a type annotation to the variable o.
        [x]: 1 // error narrow type !== declared type
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:4:12: Add a type annotation to the variable o.
!!! related TS9035 computedPropertiesNarrowed.ts:5:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    
    const y: 0 = 0
    export let o2 = {
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:10:12: Add a type annotation to the variable o2.
        [y]: 1 // ok literal computed type 
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:10:12: Add a type annotation to the variable o2.
!!! related TS9035 computedPropertiesNarrowed.ts:11:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    // literals are ok
    export let o3 = { [1]: 1 }
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:15:12: Add a type annotation to the variable o3.
                           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:15:12: Add a type annotation to the variable o3.
!!! related TS9035 computedPropertiesNarrowed.ts:15:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    export let o31 = { [-1]: 1 }
               ~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:16:12: Add a type annotation to the variable o31.
                             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:16:12: Add a type annotation to the variable o31.
!!! related TS9035 computedPropertiesNarrowed.ts:16:26: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
    export let o32 = { [1-1]: 1 } // error number 
               ~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:18:12: Add a type annotation to the variable o32.
    
    let u = Symbol();
    export let o4 = {
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:21:12: Add a type annotation to the variable o4.
        [u]: 1 // Should error, nut a unique symbol
    }
    
    export let o5  ={
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:25:12: Add a type annotation to the variable o5.
        [Symbol()]: 1 // Should error
    }
    
    const uu: unique symbol = Symbol();
    export let o6  = {
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:30:12: Add a type annotation to the variable o6.
        [uu]: 1 // Should be ok
              ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:30:12: Add a type annotation to the variable o6.
!!! related TS9035 computedPropertiesNarrowed.ts:31:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    
    function foo (): 1 { return 1; }
    export let o7 = {
               ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:36:12: Add a type annotation to the variable o7.
        [foo()]: 1 // Should error
                 ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:36:12: Add a type annotation to the variable o7.
!!! related TS9035 computedPropertiesNarrowed.ts:37:14: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    };
    
    let E = { A: 1 } as const
    export const o8 = {
                 ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:41:14: Add a type annotation to the variable o8.
        [E.A]: 1 // Fresh 
               ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:41:14: Add a type annotation to the variable o8.
!!! related TS9035 computedPropertiesNarrowed.ts:42:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    function ns() { return { v: 0 } as const }
    export const o9 = {
                 ~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:46:14: Add a type annotation to the variable o9.
        [ns().v]: 1
                  ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 computedPropertiesNarrowed.ts:46:14: Add a type annotation to the variable o9.
!!! related TS9035 computedPropertiesNarrowed.ts:47:15: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    